--- a/src/main/resources/static/ejemplo2.html
+++ b/src/main/resources/static/ejemplo2.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
+
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Tienda en Linea</title>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="css/Estilos.css" rel="stylesheet" type="text/css"/>
         <link href="css/menu.css" rel="stylesheet" type="text/css"/>
     </head>
@@ -12,7 +12,7 @@
             <nav class="nav">
                 <a href="index.html" class="logo nav-link">TechShop</a>
                 <ul class="nav-menu">
-                    <li class="nav-menu-item"><a class="nav-menu-link nav-link" href="ejemplo9.html">&LeftTriangleBar;</a></li>
+                    <li class="nav-menu-item"><a class="nav-menu-link nav-link" href="index.html">&LeftTriangleBar;</a></li>
                     <li class="nav-menu-item"><a class="nav-menu-link nav-link" href="ejemplo2.html">&RightTriangleBar;</a></li>
                     <li class="nav-menu-item"><a class="nav-menu-link nav-link" href="audios.html">&Audios</a></li>
                     <li class="nav-menu-item"><a class="nav-menu-link nav-link" href="videos.html">Videos</a></li>
@@ -25,22 +25,20 @@
             <h2>Contenido lateral</h2>
             <br />
             <p style="text-align: right;">Lorem ipsum was conceived as filler text, formatted in a certain way to enable the presentation of graphic elements in documents, without the need for formal copy.
-        </aside>    
+        </aside>
         <section id="contenido">
-            <h1 style="text-align: center;  color: violet;">Home</h1>
-            <p>Bienvenidos al curso de web y patrones</p>
+            <div style="text-align: center; width: 50%; margin: 0 auto;">
+                <h1>Ejemplo 2</h1>
+                <p>Bienvenidos al curso de Web y Patrones</p>
+            </div>
 
-            <p style="text-align: right;">Lorem ipsum was conceived as filler text, formatted in a certain way to enable the presentation of graphic elements in documents, without the need for formal copy.
-            <p style="text-align: center;">Using Lorem Ipsum allows designers to put together layouts and the form of the content before the content has been created, giving the design and production process more freedom.
-            <p style="text-align: left;">It is widely believed that the history of Lorem Ipsum originates with Cicero in the 1st Century BC and his text De Finibus bonorum et malorum.
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-            <p>Ultima linea...</p>
-        </section>
+            <div>
+                <p style="text-align: right;">Lorem ipsum was conceived as filler text, formatted in a certain way to enable the presentation of graphic elements in documents, without the need for formal copy.
+                <p style="text-align: center;">Using Lorem Ipsum allows designers to put together layouts and the form of the content before the content has been created, giving the design and production process more freedom.
+                <p style="text-align: center;">It is widely believed that the history of Lorem Ipsum originates with Cicero in the 1st Century BC and his text De Finibus bonorum et malorum.
+
+            </div>
+        </section>  
         <footer id="piePagina">Derechos reservados &COPY; 2023</footer>
-
     </body>
 </html>
